--- a/css/mobile.css
+++ b/css/mobile.css
@@ -120,6 +120,138 @@
 }
 
 
+@media (max-width: 414px) {
+    .projects-grid {
+        grid-template-columns: 1fr;
+    }
+
+    .nav {
+        display: flex;
+        position: fixed;
+    }
+
+    li {
+        color: var(--cor2);
+        font-size: 2.5rem;
+    }
+
+    #img-um {
+        display: none;
+    }
+
+    #img-dois {
+        display: none;
+    }
+
+    #welcome-section {
+        height: 80vh;
+        background-color: white;
+        margin-bottom: 6rem;
+    }
+
+    .container-colunas {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: start;
+    }
+
+    .meuNome {
+        width: 100%;
+        padding-left: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        
+    }
+
+    .meuNome h1 {
+        width: 100%;
+        font-weight: bold;
+        font-size: 5rem;
+        line-height: 5rem;
+        text-align: center;
+    }
+
+    .meuNome p {
+        font-size: 2rem;
+        white-space: nowrap;
+        color: black;
+        font-weight: 600;
+        letter-spacing: -1px;
+        display: flex;
+    }
+
+    .project-image {
+        width: 380px;
+    }
+
+    /* ================================================= */
+
+
+    #secao-tres h2 {
+        font-size: 3rem;
+    }
+
+    #secao-tres p {
+        font-size: 2rem;
+    }
+
+    .container-link {
+        font-size: 15px;
+    }
+
+    .cont {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #projects h2 {
+        border-bottom: none;
+        font-size: 16px;
+        text-align: center;
+        line-height: 30px;
+        color: black;
+        font-weight: 800;
+    }
+
+    .div-retangulo {
+        height: 3rem;
+    }
+
+    footer p {
+        padding-left: 30px;
+    }
+
+    .container-link {
+        width: 25%;
+        margin: 0 auto;
+        margin-top: 120px;
+    }
+
+    .container-link i {
+        color: var(--cor2);
+        width: none;
+    }
+
+    .links-contatos {
+        border-radius: 7px;
+        border: 1px solid black;
+        box-shadow: 5px 4px 3px var(--cor2);
+        height: 30px;
+        text-align: center;
+        margin-bottom: 20px;
+        padding-top: 5px;
+    }
+
+}
+
+
+
+
 @media (min-width: 464px) and (max-width: 481px) {
     .projects-grid {
         grid-template-columns: 1fr;
@@ -241,12 +373,12 @@
 
 }
 
-@media (min-width: 768px) {
+@media (min-width: 768px) and (max-width: 820px) {
     .projects-grid {
         grid-template-columns: 1fr;
     }
 
-    .nav{
+    .nav {
         border-bottom: 3px solid var(--cor2);
     }
 
@@ -335,7 +467,7 @@
         font-weight: 600;
     }
 
-    .div-retangulo p{
+    .div-retangulo p {
         font-size: 2.5rem;
     }
 
@@ -364,7 +496,262 @@
         border-radius: 7px;
         border: 1px solid black;
         box-shadow: 5px 4px 3px var(--cor2);
-        height:30px;
+        height: 30px;
+        text-align: center;
+        margin-bottom: 25px;
+        padding-top: 5px;
+        font-size: 2rem;
+    }
+
+}
+
+
+
+@media (min-width: 464px) and (max-width: 481px) {
+    .projects-grid {
+        grid-template-columns: 1fr;
+    }
+
+    li {
+        color: var(--cor2);
+    }
+
+    #img-um {
+        display: none;
+    }
+
+    #img-dois {
+        display: none;
+    }
+
+    #welcome-section {
+        height: 100vh;
+        background-color: white;
+        margin-bottom: 6rem;
+    }
+
+    .container-colunas {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: start;
+    }
+
+    .meuNome {
+        width: 100%;
+        padding-left: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+
+    .meuNome h1 {
+        width: 100%;
+        font-weight: bold;
+        font-size: 7rem;
+        line-height: 6rem;
+        text-align: center;
+    }
+
+    .meuNome p {
+        font-size: 3rem;
+        white-space: nowrap;
+        color: black;
+        font-weight: 600;
+        letter-spacing: -1px;
+        display: flex;
+    }
+
+    /* ================================================= */
+
+
+    #secao-tres h2 {
+        font-size: 4rem;
+    }
+
+    #secao-tres p {
+        font-size: 2.2rem;
+    }
+
+    .container-link {
+        font-size: 15px;
+    }
+
+    .cont {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #projects h2 {
+        border-bottom: none;
+        font-size: 30px;
+        text-align: center;
+        line-height: 30px;
+        color: black;
+    }
+
+    .descrição {
+        font-size: 5rem;
+    }
+
+    .div-retangulo {
+        height: 3rem;
+    }
+
+    footer p {
+        padding-left: 30px;
+    }
+
+    .container-link {
+        width: 25%;
+        margin: 0 auto;
+        margin-top: 120px;
+    }
+
+    .container-link i {
+        color: var(--cor2);
+        width: none;
+    }
+
+    .links-contatos {
+        border-radius: 7px;
+        border: 1px solid black;
+        box-shadow: 5px 4px 3px var(--cor2);
+        height: 20px;
+        text-align: center;
+        margin-bottom: 8px;
+        padding-top: 5px;
+    }
+
+}
+
+@media (min-width: 768px) and (max-width: 820px) {
+    .projects-grid {
+        grid-template-columns: 1fr;
+    }
+
+    .nav {
+        border-bottom: 3px solid var(--cor2);
+    }
+
+    li {
+        color: var(--cor2);
+        font-size: 3.5rem;
+    }
+
+    #img-um {
+        display: none;
+    }
+
+    #img-dois {
+        display: none;
+    }
+
+
+    #welcome-section {
+        height: 80vh;
+        background-color: white;
+        margin-bottom: 8rem;
+    }
+
+    .container-colunas {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: start;
+    }
+
+    .meuNome {
+        width: 100%;
+        padding-left: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+
+    .meuNome h1 {
+        width: 100%;
+        font-weight: bold;
+        font-size: 8rem;
+        line-height: 7rem;
+        text-align: center;
+    }
+
+    .meuNome p {
+        font-size: 4rem;
+        white-space: nowrap;
+        color: black;
+        font-weight: 600;
+        letter-spacing: -1px;
+        display: flex;
+    }
+
+    /* ================================================= */
+
+
+    #secao-tres h2 {
+        font-size: 6rem;
+        margin-top: 6rem;
+    }
+
+    #secao-tres p {
+        font-size: 3rem;
+    }
+
+    .container-link {
+        font-size: 15px;
+    }
+
+    .cont {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #projects h2 {
+        border-bottom: none;
+        font-size: 30px;
+        text-align: center;
+        line-height: 30px;
+        color: black;
+        font-weight: 600;
+    }
+
+    .div-retangulo p {
+        font-size: 2.5rem;
+    }
+
+    .div-retangulo {
+        height: 4rem;
+    }
+
+    footer p {
+        padding-left: 30px;
+        height: 6.5rem;
+        font-size: 2rem;
+    }
+
+    .container-link {
+        width: 25%;
+        margin: 0 auto;
+        margin-top: 200px;
+    }
+
+    .container-link i {
+        color: var(--cor2);
+        width: none;
+    }
+
+    .links-contatos {
+        border-radius: 7px;
+        border: 1px solid black;
+        box-shadow: 5px 4px 3px var(--cor2);
+        height: 30px;
         text-align: center;
         margin-bottom: 25px;
         padding-top: 5px;
