--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ li:hover {
 /* ========================================================== */
 
 #projects {
-    padding: 5rem 1.5rem;
+    padding: rem 1.5rem;
     width: 100%;
 }
 
